--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.2",
+    "@elevenlabs/react": "^0.12.1",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1"
