--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.560.0",
+    "@prisma/client": "6.19",
+    "dotenv": "^17.2.3",
     "next": "16.0.8",
+    "prisma": "6.19",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "tailwind-merge": "^3.4.0",
