--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@anam-ai/js-sdk": "^4.7.0",
     "@ai-sdk/google": "^2.0.46",
+    "@anam-ai/js-sdk": "^4.7.0",
     "@clerk/nextjs": "^6.36.2",
     "@elevenlabs/react": "^0.12.1",
+    "@modelcontextprotocol/sdk": "^1.24.3",
     "@prisma/client": "6.19",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@types/three": "^0.182.0",
-    "chatdio": "^1.2.1",
+    "@vercel/mcp-adapter": "^1.0.0",
     "ai": "^5.0.111",
+    "chatdio": "^1.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
@@ -28,7 +30,8 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "tailwind-merge": "^3.4.0",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
